--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-masonry-css": "^1.0.16",
     "react-router-dom": "^7.6.2",
     "react-scripts": "5.0.1",
+    "recharts": "^3.1.0",
     "tailwind-clip-path": "^1.0.0"
   },
   "devDependencies": {
