--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
     "@react-oauth/google": "^0.12.2",
     "axios": "^1.10.0",
     "framer-motion": "^12.23.6",
+    "i18next": "^25.3.2",
     "jwt-decode": "^4.0.0",
     "nprogress": "^0.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.6.1",
     "react-icons": "^5.5.0",
     "react-masonry-css": "^1.0.16",
     "react-pdf": "^10.0.1",
