--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "framer-motion": "^12.23.6",
     "jwt-decode": "^4.0.0",
     "nprogress": "^0.2.0",
+    "pdfjs-dist": "^5.3.93",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
